--- a/1. Julia basics.ipynb
+++ b/1. Julia basics.ipynb
@@ -159,9 +159,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "statutory-writing",
+   "metadata": {},
+   "source": [
+    "## 1.2.2 Control Syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "shaped-activation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " x is less than y. \n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1.0\n",
+    "y = 2.0\n",
+    "if x < y\n",
+    "    println(\" x is less than y. \")\n",
+    "elseif x ==y\n",
+    "    println(\"x is equal to y. \")\n",
+    "else\n",
+    "    println(\"x is greater than y. \")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "instructional-asbestos",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = -3\n",
+    "y = x < 0 ? \"T\" : \"F\" # Ternary operator\n",
+    "println(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dietary-specialist",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 1, b = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "b = 0\n",
+    "true && (a = 1) # Short-Circuit Evaluation\n",
+    "true || (b = 1)\n",
+    "println(\"a = $(a), b = $(b)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "determined-charge",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in 1:10\n",
+    "    println(i)\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brilliant-google",
+   "id": "seasonal-blast",
    "metadata": {},
    "outputs": [],
    "source": []
