--- a/1.2.ipynb
+++ b/1.2.ipynb
@@ -17,8 +17,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69d3b7f6",
+   "metadata": {},
+   "source": [
+    "Juliaでは，型の宣言を行わずに直接変数を作成して初期値を設定可能．"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "54b33d1c-0dd2-4087-bf77-2aa0441e2f6c",
    "metadata": {},
    "outputs": [
@@ -39,8 +47,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "169b1357",
+   "metadata": {},
+   "source": [
+    "typeof 関数を使うことによって，それぞれの変数の型を調べることが可能．"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "3849b443",
    "metadata": {},
    "outputs": [
@@ -60,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "42f0758c",
    "metadata": {},
    "outputs": [
@@ -80,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "4023d1c5",
    "metadata": {},
    "outputs": [
@@ -99,8 +115,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea765936",
+   "metadata": {},
+   "source": [
+    "四則演算なども他のプログラミング言語と同様．"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "2c6fe23b",
    "metadata": {},
    "outputs": [
@@ -123,12 +147,13 @@
    "id": "cd457fdd",
    "metadata": {},
    "source": [
+    "Unicode 入力が可能\n",
     "Unicode input https://docs.julialang.org/en/v1/manual/unicode-input/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "e1de8018",
    "metadata": {},
    "outputs": [
@@ -153,9 +178,257 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "582ba8f0",
+   "metadata": {},
+   "source": [
+    "基本演算の例"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1f250dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x + y # 加算 addition\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "662251b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x - y # 減産 subtraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "83788ab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5999999999999996"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x * y # 乗算 multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e59f9687",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x / y # 除算 division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5cd06918",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.7371928188465517"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x ^y # べき乗 exponentiation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "94418984",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x ÷ y # 除算の商 quotient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5517059e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6000000000000001"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x % y # 剰余 remainder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c5fbed58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x == y # 等価 equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b0679fcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x < y # 小なり less than"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9c0ae0b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x > y # 大なり greater than"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "749d3db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    " x ≤ y # 小なりイコール less than or equal to (\\le, \\leq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d475fa69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x ≥ y # 大なりイコール greater than or equal to (\\ge, \\geq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7f4ed449",
    "metadata": {},
    "outputs": [],
    "source": []
